Update Docker image build rules
Only build the docker image when we push to master. This will keep the repo versioning down, and docker tags simpler.

--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -1,8 +1,11 @@
 name: Publish Docker image on DockerHub
 on: 
   push: 
+    branches:
+      - master
     paths: 
       - 'Dockerfile'
+    
 jobs:
   build:
     runs-on: ubuntu-latest
