attempt at auto-update of docker-compose.yml

--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -33,6 +33,14 @@ jobs:
           - Rebuilt Docker image and published to DockerHub with new tag
         draft: false
         prerelease: false
+    - name: update Docker Compose
+      id: update_docker_compose
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git pull origin master
+        awk '{gsub("v[0-9]+[.]+.+", ${{ steps.bump.outputs.new_tag }}, $0); print}' docker-compose.yml
+        git commit -m "update Docker Compose" -a
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
