trying to pass actions variable to awk

--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -26,7 +26,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git pull origin master
-        awk '{gsub("v[0-9]+[.]+.+", ${{ steps.bump.outputs.new_tag }}, $0); print}' docker-compose.yml > docker-compose.tmp && mv docker-compose.tmp docker-compose.yml
+        awk -v tag=${{ steps.bump.outputs.new_tag }} '{gsub("v[0-9]+[.]+.+", tag, $0); print}' docker-compose.yml > docker-compose.tmp && mv docker-compose.tmp docker-compose.yml
         git commit -m "update Docker Compose" -a
     - name: Create Release
       id: create_release
