added 4g memory limit to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 services:
   book-env:
-    image: ubcdsci/intro-to-ds:v0.10.0
+    image: ubcdsci/intro-to-ds:v0.12.0
     ports:
       - "8787:8787"
     volumes:
       - .:/home/rstudio/introduction-to-datascience
     environment:
       PASSWORD: password
+    deploy:
+      resources:
+        limits:
+          memory: 4G
       
