--- a/pdf/_bookdown.yml
+++ b/pdf/_bookdown.yml
@@ -8,4 +8,5 @@ language:
   ui:
     edit: "Edit"
     chapter_name: "Chapter "
-rmd_files: ["index.Rmd", "intro.Rmd", "reading.Rmd", "wrangling.Rmd", "viz.Rmd", "references.Rmd"]
+#rmd_files: ["index.Rmd", "intro.Rmd", "classification2.Rmd", "references.Rmd"]
+rmd_files: ["index.Rmd", "intro.Rmd", "reading.Rmd", "wrangling.Rmd", "viz.Rmd", "classification1.Rmd", "classification2.Rmd", "references.Rmd"]
