--- a/pdf/_bookdown.yml
+++ b/pdf/_bookdown.yml
@@ -8,5 +8,5 @@ language:
   ui:
     edit: "Edit"
     chapter_name: "Chapter "
-#rmd_files: ["index.Rmd", "intro.Rmd", "setup.Rmd", "references.Rmd"]
-rmd_files: ["index.Rmd", "intro.Rmd", "reading.Rmd", "wrangling.Rmd", "viz.Rmd", "classification1.Rmd", "classification2.Rmd", "regression1.Rmd", "regression2.Rmd", "clustering.Rmd", "inference.Rmd", "jupyter.Rmd", "version-control.Rmd", "setup.Rmd", "references.Rmd"]
+#rmd_files: ["index.Rmd", "authors.Rmd", "intro.Rmd", "setup.Rmd", "references.Rmd"]
+rmd_files: ["index.Rmd", "authors.Rmd", "intro.Rmd", "reading.Rmd", "wrangling.Rmd", "viz.Rmd", "classification1.Rmd", "classification2.Rmd", "regression1.Rmd", "regression2.Rmd", "clustering.Rmd", "inference.Rmd", "jupyter.Rmd", "version-control.Rmd", "setup.Rmd", "references.Rmd"]
