added cname to gh-pages action

--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -32,4 +32,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/
           force_orphan: true
+          cname: datasciencebook.ca
 
