added docker-compose to auto-image-update workflow

--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -43,6 +43,14 @@ jobs:
         chmod u+x build_pdf.sh
         git add build_pdf.sh
         git commit -m "update build_pdf.sh script with new docker image"
+    - name: Update docker-compose.yml script
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git pull origin master
+        sed 's/ubcdsci\/intro-to-ds:[[:alnum:]]\+/ubcdsci\/intro-to-ds:${{ steps.rebuild.outputs.snapshot-tag }}/g' docker-compose.yml > docker-compose.tmp && mv docker-compose.tmp docker-compose.yml
+        git add docker-compose.yml
+        git commit -m "update docker-compose.yml script with new docker image"
     - name: Push changes to build scripts
       uses: ad-m/github-push-action@master
       with:
