matching .rstudio and .local files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 *.sw*
 _bookdown_files
 **.ipynb_checkpoints
-.rstudio/*
+.rstudio/**
 pdf/_book
 pdf/_bookdown_files
 pdf/*.log
 docs/**
+.local/**
