fixed matching on book build workflow

--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -4,7 +4,12 @@ on:
     branches:
       - production
     paths:
-      - '*.Rmd'
+      - 'index.Rmd'
+      - '_bookdown.yml'
+      - '_output.yml'
+      - 'source/*.Rmd'
+      - 'source/*.bib'
+      - 'source/*.css'
       - 'data/**'
       - 'img/**'
       
