added citeproc to html output to compile references

--- a/_output.yml
+++ b/_output.yml
@@ -6,7 +6,7 @@ bookdown::gitbook:
         <li><a href="https://datasciencebook.ca">Data Science: A First Introduction</a></li>
     edit: null
     download: null
-  pandoc_args: ["--verbose", "--bibliography=source/references.bib"]
+  pandoc_args: ["--verbose", "--bibliography=source/references.bib", "--citeproc"]
 bookdown::epub_book: default
 bookdown::pdf_book:
   includes:
