minor bugfix from workflow docker image tag update (should be fine going forward)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   book-env:
-    image: ubcdsci/intro-to-ds:20230709020300d0b466.23.0
+    image: ubcdsci/intro-to-ds:20230709020300d0b466
     ports:
       - "8787:8787"
     volumes:
