bool -> string check in workflow

--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -33,7 +33,7 @@ jobs:
             fi
         fi
     - name: Rebuild and publish image
-      if: ${{steps.check-stale.outputs.stale_dockerfile == true }}
+      if: ${{ steps.check-stale.outputs.stale_dockerfile == 'true' }}
       id: rebuild
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
@@ -43,7 +43,7 @@ jobs:
         dockerfile: Dockerfile
         snapshot: true
     - name: Update build_html.sh script
-      if: ${{steps.check-stale.outputs.stale_dockerfile == true }}
+      if: ${{ steps.check-stale.outputs.stale_dockerfile == 'true' }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
@@ -53,7 +53,7 @@ jobs:
         git add build_html.sh
         git commit -m "update build_html.sh script with new docker image"
     - name: Update build_pdf.sh script
-      if: ${{steps.check-stale.outputs.stale_dockerfile == true }}
+      if: ${{ steps.check-stale.outputs.stale_dockerfile == 'true' }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
@@ -63,7 +63,7 @@ jobs:
         git add build_pdf.sh
         git commit -m "update build_pdf.sh script with new docker image"
     - name: Update docker-compose.yml script
-      if: ${{steps.check-stale.outputs.stale_dockerfile == true }}
+      if: ${{ steps.check-stale.outputs.stale_dockerfile == 'true' }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
@@ -72,7 +72,7 @@ jobs:
         git add docker-compose.yml
         git commit -m "update docker-compose.yml script with new docker image"
     - name: Push changes to build scripts
-      if: ${{steps.check-stale.outputs.stale_dockerfile == true }}
+      if: ${{ steps.check-stale.outputs.stale_dockerfile == 'true' }}
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
