added analytics file

--- a/_output.yml
+++ b/_output.yml
@@ -7,6 +7,9 @@ bookdown::gitbook:
     edit: null
     download: null
   pandoc_args: ["--verbose", "--bibliography=source/references.bib", "--citeproc"]
+  includes:
+    in_header: source/analytics.html
+
 bookdown::epub_book: default
 bookdown::pdf_book:
   includes:
