--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -6,6 +6,7 @@ on:
       - Dockerfile
 jobs:
   rebuild-docker:
+    name: Rebuild docker image
     runs-on: ubuntu-latest
     permissions:
       contents: write
