--- a/.github/workflows/deploy_pr_preview.yml
+++ b/.github/workflows/deploy_pr_preview.yml
@@ -28,6 +28,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: "Rebuild docker image"
           ref: ${{ github.event.pull_request.head.sha }}
+          timeoutSeconds: 60000
 
       - name: Checkout the repo
         uses: actions/checkout@v2
