--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -20,7 +20,7 @@ jobs:
         echo "GitHub PR action type: ${{ github.event.action }}"
         echo "Checking if the PR modifies the Dockerfile"
         echo "GitHub event before: ${{ github.event.before }}"
-        echo "GitHub event before: ${{ github.event.after }}"
+        echo "GitHub event after: ${{ github.event.after }}"
         git diff --quiet ${{ github.event.before }} ${{ github.event.after }} Dockerfile
         DIFFSTATUS=$?
         echo "Diff (1 if diff, 0 if not): $DIFFSTATUS"
