revert buggy exit code checks in update_build_env

--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -21,10 +21,7 @@ jobs:
         echo "Checking if the PR modifies the Dockerfile"
         echo "GitHub event before: ${{ github.event.before }}"
         echo "GitHub event after: ${{ github.event.after }}"
-        git diff --quiet ${{ github.event.before }} ${{ github.event.after }} Dockerfile
-        DIFFSTATUS=$?
-        echo "Diff (1 if diff, 0 if not): $DIFFSTATUS"
-        if [ $DIFFSTATUS -eq 0 ]; then
+        if git diff --quiet ${{ github.event.before }} ${{ github.event.after }} Dockerfile; then
             echo "PR synchronized, but Dockerfile was not edited. Not rebuilding the image."
             echo "stale_dockerfile=false" >> "$GITHUB_OUTPUT"
         else
