only rebuild dockerfile on PR to main

--- a/.github/workflows/update_build_environment.yml
+++ b/.github/workflows/update_build_environment.yml
@@ -2,6 +2,8 @@ name: Rebuild and publish new ubcdsci/intro-to-ds image on DockerHub
 on:
   pull_request:
     types: [opened, synchronize]
+    branches:
+      - 'main'
 jobs:
   rebuild-docker:
     name: Rebuild docker image
