--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -22,7 +22,7 @@ jobs:
       packages: write
 
     steps:
-      - name: checkout
+      - name: checkout production
         uses: actions/checkout@v2
         with:
           ref: 'production'
@@ -39,4 +39,23 @@ jobs:
           publish_dir: docs/
           force_orphan: true # this will clean up all previous PR previews / main branch preview
           cname: datasciencebook.ca
+
+      # rebuild the dev version after the previous copy was cleaned out
+      - name: checkout main
+        uses: actions/checkout@v2
+        with:
+          ref: 'main'
+          
+      - name: Build the book
+        run: |
+          ./build_html.sh
+
+       # Push the book's HTML to github-pages
+      - name: GitHub Pages action
+        uses: peaceiris/actions-gh-pages@v3.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/
+          keep_files: true 
+          destination_dir: dev
 
