remove existing diff folder before running websitediff in action

--- a/.github/workflows/deploy_pr_preview.yml
+++ b/.github/workflows/deploy_pr_preview.yml
@@ -75,6 +75,7 @@ jobs:
           rustup update
           pip install --upgrade pip
           pip install website_diff
+          rm -rf diff${{ github.event.number }}
           website_diff --old dev --new pull${{ github.event.number }} --diff diff${{ github.event.number }}
 
       - name: GitHub Pages action to push diff
