--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Copy contents of dev/ to home folder
         run: |
-          yes | cp -rf dev ${{ runner.home }}
+          yes | cp -rf dev $HOME
 
       # Push update website to dev/ and clean out old commits
       - name: Update website to contents of dev, remove all old commits and subpages
