update home in workflow

--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: copy dev/ website back in
         run: |
-          yes | cp -rf ${{ runner.home }}/dev dev
+          yes | cp -rf $HOME/dev dev
 
       - name: push the result to gh-pages
         uses: stefanzweifel/git-auto-commit-action@v5
