refetch orphaned gh-pages branch in workflow

--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -40,6 +40,11 @@ jobs:
           force_orphan: true # this will clean up all previous PR previews / main branch preview
           cname: datasciencebook.ca
 
+      - name: checkout gh-pages again (to grab new orphaned upstream branch)
+        uses: actions/checkout@v2
+        with:
+          ref: 'gh-pages'
+
       - name: copy dev/ website back in
         run: |
           yes | cp -rf $HOME/dev dev
