fix update book workflow to not delete everything

--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Clean the site contents except for dev, pull contents of dev/ to main site
         run: |
           # delete everything except the dev folder
-          ls -1 --hide=dev | xargs rm -rf
+          find . ! -name "dev" -maxdepth 1 -delete
           # copy the contents of dev into the root
           cp -rf dev/* .
           
@@ -39,5 +39,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          force_orphan: true # this will clean up all previous PR previews / main branch preview
+          force_orphan: true 
           cname: datasciencebook.ca
