--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Clean the site contents except for dev, pull contents of dev/ to main site
         run: |
-          # delete everything except the dev folder
-          find . ! -name "dev" -maxdepth 1 -delete
+          # delete everything except the dev and .git folders
+          find . -maxdepth 1 ! -name ".git" ! -name "dev" ! -name "." | xargs rm -rf
           # copy the contents of dev into the root
           cp -rf dev/* .
           
