--- a/.github/workflows/update_book.yml
+++ b/.github/workflows/update_book.yml
@@ -39,5 +39,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
           force_orphan: true 
           cname: datasciencebook.ca
